fixed spacing in between h2 and separator

--- a/apps/docs/src/app/documentation/core-helpers/docs-section-title/docs-section-title.component.scss
+++ b/apps/docs/src/app/documentation/core-helpers/docs-section-title/docs-section-title.component.scss
@@ -1,7 +1,8 @@
 .docs-header-link {
     position: relative;
     display: inline-block;
-    padding-top: 50px;
+    padding-top: 4rem;
+    margin-block-start: -2rem;
 }
 
 .docs-header-link .docs-markdown-a {
